# sky-database

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  skydb.yml  tox.ini
src/skydb/: __init__.py  classes.py  connections.py  tables.py  update.py
src/skydb/sheets/: __init__.py  google_sheets.py  style.py
tests/: test_db_connection.py  test_db_update.py  utils.py
