[metadata]
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires = 
    pandas
    matplotlib
    sqlalchemy
    cloud-sql-python-connector[pg8000]
    pg8000
    sky-api-python-client
    google-cloud-secret-manager
    google-cloud-storage
    gspread
    matplotlib
    gspread==5.2.0